k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iceberg-ttx
  labels:
    app.kubernetes.io/name: iceberg-ttx
